# carma_boilerplate

./: .gitignore  CMakeLists.txt  onion.py
.devcontainer/: devcontainer.json
include/onion/: add.hpp  pet.hpp
src/: add.cpp  exports.cpp  onion.cpp  pet.cpp
